--- a/web/template/index.html
+++ b/web/template/index.html
@@ -51,15 +51,24 @@
 			<div class="col-md-8 col-12">
 			<textarea class="form-control" rows="2" placeholder="Memo" id="memo" name="memo"></textarea>
 			</div>
-			<div class="col-md-4 col-12">
+			<div class="col-md-2 col-6">
 			<label>Deadline</label>
 			<input type="date" id="deadline" class="form-control" name="deadline">
+			</div>
+			<div class="col-md-2 col-12">
+			<label>Priority</label>
+			<select class="form-select form-select" id="priorityid" name="priorityid">
+  				{{ range .priorities }}
+  					<option value="{{.Key1}}">{{.Value1}}</option>
+  				{{ end }}
+			</select>
 			</div>
 			</div>
 			<button type="submit" class="btn btn-primary btn-md">Submit</button>
 		</form>
 
 		<a href="/" class="link-dark">All</a>
+		<a href="?priority=A" class="link-warning">Priority-A</a>
 		<a href="?deadline=2022-05-01" class="link-danger">Today</a>
 		<a href="?state=new" class="link-primary">New</a>
 		<a href="?state=progress" class="link-success">Progress</a>
@@ -69,11 +78,12 @@
 			<table class="table table-bordered">
 		    <thead class="table-primary">
 		        <tr>
-		            <th scope="col" style="width:100px;">ID</th>
+		            <th scope="col" style="width:70px;">ID</th>
 		            <th scope="col">Task</th>
-		            <th scope="col" style="min-width:150px; width:150px;">Deadline</th>
+		            <th scope="col" style="min-width:120px; width:120px;">Deadline</th>
 		            <th scope="col" style="min-width:50px; width:50px;">%</th>
-		            <th scope="col" style="width:100px;">State</th>
+		            <th scope="col" style="width:70px;">State</th>
+		            <th scope="col" style="width:70px;">Priority</th>
 		        </tr>
 		    </thead>
 		    <tbody>
@@ -95,6 +105,7 @@
 		            <td scope="col">{{.Deadline}}</td>
 		            <td scope="col">{{.Percent}}</td>
 		            <td scope="col"><input type="hidden" value="{{.StateId}}">{{.State}}</td>
+		            <td scope="col"><input type="hidden" value="{{.PriorityId}}">{{.Priority}}</td>
 		            <input type="hidden" value="{{.Memo}}">
 		        </tr>
 		        {{ end }}
@@ -118,6 +129,7 @@
 		document.getElementById("deadline").value = trNode.cells[2].innerHTML
 		document.getElementById("percent").value = trNode.cells[3].innerHTML
 		document.getElementById("stateid").value = trNode.cells[4].firstElementChild.value
+		document.getElementById("priorityid").value = trNode.cells[5].firstElementChild.value
 		document.getElementById("memo").value = trNode.lastElementChild.value
 
 		document.taskform.action = `/task/${trNode.cells[0].innerHTML}`
