--- a/web/template/tasks.html
+++ b/web/template/tasks.html
@@ -1,7 +1,6 @@
 {{template "header" .}}
 <div class="d-flex flex-row w-100 min-vh-100">
 	<nav class="sidebar bg-light navbar-light px-3">
-		<a href="group">Group Setting</a>
 		<div class="mt-3">
 		{{.groupname}} members
 		</div>
@@ -22,11 +21,12 @@
 			<table class="table table-bordered">
 		    <thead class="table-primary">
 		        <tr>
-		            <th scope="col" style="width:100px;">ID</th>
+		            <th scope="col" style="width:70px;">ID</th>
 		            <th scope="col">Task</th>
-		            <th scope="col" style="min-width:150px; width:150px;">Deadline</th>
+		            <th scope="col" style="min-width:120px; width:120px;">Deadline</th>
 		            <th scope="col" style="min-width:50px; width:50px;">%</th>
-		            <th scope="col" style="width:100px;">State</th>
+		            <th scope="col" style="width:70px;">State</th>
+		            <th scope="col" style="width:70px;">Priority</th>
 		        </tr>
 		    </thead>
 		    <tbody>
@@ -46,6 +46,7 @@
 		            <td scope="col">{{.Deadline}}</td>
 		            <td scope="col">{{.Percent}}</td>
 		            <td scope="col">{{.State}}</td>
+		            <td scope="col">{{.Priority}}</td>
 		        </tr>
 		        {{ end }}
 		    </tbody>
